--- a/myFooter.html
+++ b/myFooter.html
@@ -1,6 +1,6 @@
 <hr>
 <div class="myFooter">
-	<div style="text-align: left;"> &copy; <a href="https://github.com/elsaburren" class="myLink" target="_blank">Elsa Burren</a></div> (website template)
+	<div style="text-align: left;"> &copy; Web design by <a href="https://github.com/elsaburren/website" class="myLink" target="_blank">Elsa Burren</a></div>
 	<div style="text-align: center;"><a href="#scroll-top" title="scroll to top">&uarr;</a></div>
 	<!--created by Elsa Burren-->
 </div>
